# LuminaTask---Linux-System-Monitor

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  processmanager.h
src/: main.cpp  mainwindow.cpp  processmanager.cpp
